Permitir editar y cancelar promociones programadas
